src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
@import "styles/variables";
@import "styles/global";

.PersonalInformation {
  --button-height: 50px;
  --page-background-color: #fff;

  @include mobile-media {
    padding: 34px 20px;
    --page-background-color: #f9f7f5;
    background-color: var(--page-background-color);
  }

  // Override input here. Reduce the risk of affecting other parts of the app that might've already used the common input.
  input {
    font-weight: var(--font-weight-normal);
  }

  .inputLabel {
    font-size: var(--font-size-md);
    font-weight: var(--font-weight-medium);
    color: $checkout-primary-color;
    margin-top: 10px;

    @include mobile-media {
      font-size: var(--font-size-xs);
    }
  }

  .subtotal {
    text-align: center;
    margin-bottom: 30px;

    .label {
      font-size: var(--font-size-sm);
      color: $gray-color-user;
    }

    .value {
      font-size: var(--font-size-title);
      font-weight: var(--font-weight-medium);
    }
  }

  .section {
    margin-bottom: 30px;

    @include mobile-media {
      h3 {
        font-size: var(--font-size-lg);
      }
    }

    .sectionTitleLine {
      display: flex;
      justify-content: space-between;
      align-items: flex-end;
      margin-bottom: 12px;
    }
  }

  .expressCheckoutOptions {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 20px;

    .expressCheckoutOption {
      height: var(--button-height);
      display: flex;
      justify-content: center;
      align-items: center;
      border-radius: 4px;
      cursor: pointer;
      transition: background-color 0.1s linear;

      &.paypal {
        background-color: #f6c657;

        &:hover {
          background-color: lighten(#f6c657, 5%);
        }
      }

      .expressCheckoutLogo {
        height: 20px;
      }
    }
  }

  .payWithCard {
    position: relative;
    height: 1px;
    width: 100%;
    background-color: rgba($checkout-primary-color, 0.1);
    margin-top: 50px;
    margin-bottom: 40px;

    .text {
      position: absolute;
      left: 50%;
      transform: translate(-50%, -50%);
      background-color: var(--page-background-color);
      padding: 0 18px;
      font-size: var(--font-size-md);
      font-weight: var(--font-weight-medium);
      color: rgba($gray-color-user, 0.6);
    }
  }

  .loginHint {
    font-size: var(--font-size-lg);
    font-weight: var(--font-weight-medium);
    color: var(--text-color-slight);
    margin-right: var(--horizontal-spacing-half);
    text-align: right;

    @include mobile-media {
      font-size: var(--font-size-md);
    }
  }

  .loginLink {
    font-size: var(--font-size-lg);
    font-weight: var(--font-weight-medium);
    color: var(--primary-color);
    cursor: pointer;
    text-decoration: underline;

    @include mobile-media {
      font-size: var(--font-size-md);
    }
  }

  .contactInfoSection {
    display: grid;
    position: relative;
    grid-template-columns: 1fr auto auto;
    grid-template-rows: auto;
    grid-template-areas:
      "contact-info logged-in log-out"
      "user-name user-name user-name"
      "user-email user-email user-email";
    row-gap: 10px;

    @include mobile-media {
      grid-template-columns: auto auto;
      grid-template-areas:
        "contact-info contact-info"
        "logged-in log-out"
        "user-name user-name"
        "user-email user-email";
    }

    .contactInfoRow {
      display: flex;
      justify-content: space-between;
      align-items: center;

      @include mobile-media {
        flex-direction: column;
        align-items: flex-start;
        .inputLabel {
          color: rgba($checkout-primary-color, 0.5);
        }

        .value {
          font-size: var(--font-size-md);
        }
      }

      .inputLabel {
        margin-top: 0;
      }

      .value {
        text-align: right;
      }
    }

    .contactInfoTitle {
      grid-area: contact-info;
    }

    .loggedIn {
      grid-area: logged-in;

      .loggedInName {
        font-style: italic;
      }
    }

    .logOut {
      grid-area: log-out;
      @include mobile-media {
        text-align: right;
        font-size: var(--font-size-md);
      }
    }

    .userName {
      grid-area: user-name;
    }

    .userEmail {
      grid-area: user-email;
    }
  }

  .createAccountSection {
    display: grid;
    align-content: space-between;
    grid-template-columns: 120px auto;
    grid-template-rows: auto;
    row-gap: var(--vertical-spacing-half);
    column-gap: var(--vertical-spacing-half);

    @include mobile-media {
      grid-template-columns: auto;
      row-gap: 0;

      .inputLabel {
        margin-top: 10px;
        margin-bottom: 6px;
      }
    }
  }

  .shippingAddressSection {
    position: relative;
    margin-bottom: var(--vertical-spacing-normal);

    .addressLine {
      font-size: var(--font-size-md);
      color: $checkout-primary-color;
      font-weight: var(--font-weight-medium);

      @include mobile-media {
        color: rgba($checkout-primary-color, 0.5);
        font-size: var(--font-size-md);
      }

      & + .addressLine {
        margin-top: $margin-small;

        @include mobile-media {
          margin-top: 0;
        }
      }
    }

    .shippingOption {
      &.selected {
        .addressLine {
          color: $checkout-primary-color;
        }
      }
    }

    .radioButton {
      margin-right: $margin-small-3;
    }
  }

  .billingOption {
    display: flex;
    align-items: center;
    margin-top: 30px;
    cursor: pointer;

    .checkbox {
      margin-right: 8px;
    }

    @include mobile-media {
      margin-top: 24px;
    }
  }

  .billingAddress {
    margin-bottom: 30px;
  }

  .totalsContainer {
    border-top: 1px solid rgba($gray-color-user, 0.1);
    margin-bottom: var(--vertical-spacing-normal);

    .totalLine {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding: 10px 0;
      border-bottom: 1px solid rgba($gray-color-user, 0.1);

      .label,
      .value {
        font-size: var(--font-size-md);
        font-weight: var(--font-weight-medium);
        color: $gray-color-user;
      }

      .promoCode {
        color: $gray-color-user;
      }
    }

    .grandTotalLine {
      @extend .totalLine;
      height: 60px;
      border-bottom: 0;

      .label,
      .value {
        font-size: var(--font-size-xl);
        color: $checkout-primary-color;
      }
    }
  }

  .payButton {
    @include blackGradientButton;
    width: 100%;
    height: 60px;
    font-size: var(--font-size-lg);

    &:disabled {
      pointer-events: none;
      opacity: 0.6;
    }
  }

  .expressCheckoutUsed {
    font-size: var(--font-size-md);
    font-weight: var(--font-weight-medium);
    color: $checkout-primary-color;
    margin-top: 10px;
  }

  .addressForm {
    --input-border-radius: 5px;
  }

  .loaderContainer {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(#fff, 0.8);
    z-index: 2000; // Needed to cover the Paypal Express button

    .loader {
      font-size: 80px;
    }
  }
}

